<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/nav_home"/>

        <item
            android:id="@+id/nav_book_requests"
            android:title="@string/booking_requests" />

        <item
            android:id="@+id/nav_edit_akhysai_profile"
            android:title="@string/nav_edit_akhysai_profile" />

        <item
            android:id="@+id/nav_my_specialty"
            android:title="@string/nav_my_specialties" />


        <item
            android:id="@+id/nav_my_available_dates"
            android:title="@string/my_available_dates" />

        <item
            android:id="@+id/nav_create_article"
            android:title="@string/nav_create_article" />


        <item
            android:id="@+id/nav_my_articles"
            android:title="@string/my_articles" />


        <item
            android:id="@+id/book_akhysai"
            android:icon="@drawable/nav_akhysai"
            android:title="@string/book_akhysai_title" />

        <item
            android:id="@+id/join_us"
            android:icon="@drawable/nav_join_us"
            android:title="@string/join_us" />


        <item
            android:id="@+id/akhysai_library"
            android:title="@string/akhysai_library"
            android:icon="@drawable/ic_library"/>

        <item
            android:id="@+id/centers_and_clinics"
            android:title="@string/centers_and_clinics"
            android:icon="@drawable/ic_hospital"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>

        <item
            android:id="@+id/share"
            android:title="@string/tell_a_friend"
            android:icon="@drawable/ic_share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/nav_phone"
            app:showAsAction="ifRoom" />


        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

        <item
            android:id="@+id/login"
            android:title="@string/login"
            android:icon="@drawable/ic_exit_to_app"
            />

    </group>


</menu>